--- a/version4/styles.css
+++ b/version4/styles.css
@@ -54,3 +54,134 @@ header {
     color: #009688;
     font-weight: bold;
   }
+
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    top: 20px;
+    left: 20px;
+}
+.buttons button {
+    width: 100px;
+    height: 40px;
+    background-color: #4ba3b7;
+    border: 0;
+    margin: 8px;
+    color: white;
+    position: relative;
+    overflow: hidden;
+    font-size: 12px;
+    letter-spacing: 1px;
+    font-weight: 500;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    border-radius: 3px;
+}
+.buttons button.active {
+    background-color: #f95959;
+}
+.buttons button.active:hover {
+    letter-spacing: 1px;
+    color: white;
+    background-color: #bf4c4c;
+}
+.buttons button.active:hover:before, .buttons button.active:hover:after {
+    width: 0;
+}
+.buttons button.active:hover span:before, .buttons button.active:hover span:after {
+    height: 0;
+}
+.buttons button.disable {
+    background-color: grey;
+    opacity: 0.3;
+    cursor: auto;
+}
+.buttons button.disable:hover {
+    letter-spacing: 1px;
+    color: white;
+}
+.buttons button.disable:hover:before, .buttons button.disable:hover:after {
+    width: 0;
+}
+.buttons button.disable:hover span:before, .buttons button.disable:hover span:after {
+    height: 0;
+}
+.buttons button:before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background-color: #ace7ef;
+    transition: all 0.4s ease;
+    left: 0;
+    top: 0;
+}
+.buttons button:after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background-color: #ace7ef;
+    transition: all 0.4s 0.2s ease;
+    right: 0;
+    bottom: 0;
+}
+.buttons button span {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.buttons button span:before {
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 0;
+    background-color: #ace7ef;
+    transition: all 0.4s 0.3s ease;
+    left: 0;
+    top: 0;
+}
+.buttons button span:after {
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 0;
+    background-color: #ace7ef;
+    transition: all 0.4s 0.4s ease;
+    right: 0;
+    bottom: 0;
+}
+.buttons button:hover {
+    color: #ace7ef;
+    letter-spacing: 2px;
+}
+.buttons button:hover:before, .buttons button:hover:after {
+    width: 100%;
+}
+.buttons button:hover span:before, .buttons button:hover span:after {
+    height: 100%;
+}
+.buttons button:active {
+    outline: none;
+    border: none;
+}
+.buttons button:focus {
+    outline: 0;
+}
+
+.mainChartContainer {
+    height: auto
+}
+
+.mainLayoutContainer {
+    display: flex;
+    flex-direction: column;
+}
+
